--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -4,7 +4,7 @@
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'salmanwahed'; // required: replace example with your forum shortname
     var disqus_identifier = '{{ page.url }}';
-    var disqus_url = 'http://salmanwahed.github.io{{ page.url }}';
+    var disqus_url = 'salmanwahed.github.io{{ page.url }}';
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
