--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
   {% include head.html %}
 
   <body>
-
     {% include sidebar.html %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
@@ -26,5 +25,6 @@
         {% include comments.html %}
       </div>
     </div>
+    {% include google_analytics.html %}
   </body>
 </html>
