discuss plugin fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 
       <div class="container content">
         {{ content }}
-        {% include comments.html %}
       </div>
     </div>
     {% include google_analytics.html %}
+    {% include comments_count.html %}
   </body>
 </html>
